# Capsule-Final-

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  accuracy_test.py  check_db.py  e2e_test.py  fix_db.py  pyproject.toml  retrieval_validation.py  test_chunks.py  test_chunks2.py  test_compress.py  test_embed.py  test_gemini.py  test_mcp.py  test_payload.json  test_proj.py  test_sql.py
backend/alembic/: env.py
backend/alembic/versions/: 06e3f3665f7e_add_mcp_telemetry.py  3f560ab0b0af_init.py
backend/app/: main.py
backend/app/adapters/: base.py  chatgpt_adapter.py  platform_adapters.py  registry.py
backend/app/compression/: capsule_builder.py  metrics.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/embeddings/: base.py  factory.py  local_provider.py  openai_provider.py
backend/app/evaluation/: benchmark_runner.py  chunk_visualizer.py  chunking_evaluator.py  confidence_calibrator.py  extraction_evaluator.py  failure_analyzer.py  ranking_evaluator.py  retrieval_benchmark.py  synthetic_dataset.py  token_efficiency.py
backend/app/extraction/: entity_extractor.py  (+1 more)
backend/scripts/: benchmark_ground_truth.json  db_inspect.py  generate_telemetry_report.py  impact_ground_truth.json  impact_projects.json  mcp_server.py  run_eval.py  run_mcp_impact_eval.py  run_phase4_benchmark.py  seed_benchmark_data.py  seed_impact_data.py  verify_pgvector.py
backend/tests/: test_chunker.py  test_context_assembler.py  test_integration_openai.py  test_ranker.py  test_sanitizer.py
(+75 files in other folders)
