[project]
name = "capsule-backend"
version = "0.1.0"
description = "Project Capsule — AI Workflow Memory & Context Continuity Backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    # Data Validation
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pgvector>=0.3.2",
    # Security
    "python-multipart>=0.0.9",
    # Logging
    "structlog>=24.2.0",
    # AI / Embeddings
    "openai>=1.34.0",
    "tiktoken>=0.7.0",
    "instructor>=1.3.1",
    "numpy>=1.26.4",
    # Utilities
    "tenacity>=8.3.0",
    # HTTP Client
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
